--- a/notebooks/simple-delta-scala.ipynb
+++ b/notebooks/simple-delta-scala.ipynb
@@ -31,30 +31,11 @@
    "execution_count": null,
    "id": "475383b5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading https://repo1.maven.org/maven2/sh/almond/almond-spark_2.13/0.14.1/almond-spark_2.13-0.14.1.pom\n",
-      "Failed to download https://repo1.maven.org/maven2/sh/almond/almond-spark_2.13/0.14.1/almond-spark_2.13-0.14.1.pom\n",
-      "Downloading https://repo1.maven.org/maven2/sh/almond/almond-spark_2.13/0.14.1/almond-spark_2.13-0.14.1.pom.sha1\n",
-      "Failed to download https://repo1.maven.org/maven2/sh/almond/almond-spark_2.13/0.14.1/almond-spark_2.13-0.14.1.pom.sha1\n",
-      "Downloading https://jitpack.io/sh/almond/almond-spark_2.13/0.14.1/almond-spark_2.13-0.14.1.pom\n",
-      "Failed to download https://jitpack.io/sh/almond/almond-spark_2.13/0.14.1/almond-spark_2.13-0.14.1.pom\n",
-      "Downloading https://jitpack.io/sh/almond/almond-spark_2.13/0.14.1/almond-spark_2.13-0.14.1.pom.sha1\n",
-      "Failed to download https://jitpack.io/sh/almond/almond-spark_2.13/0.14.1/almond-spark_2.13-0.14.1.pom.sha1\n",
-      "Failed to resolve ivy dependencies:Error downloading sh.almond:almond-spark_2.13:0.14.1\n",
-      "  not found: /home/yannis/.ivy2/local/sh.almond/almond-spark_2.13/0.14.1/ivys/ivy.xml\n",
-      "  not found: https://repo1.maven.org/maven2/sh/almond/almond-spark_2.13/0.14.1/almond-spark_2.13-0.14.1.pom\n",
-      "  not found: https://jitpack.io/sh/almond/almond-spark_2.13/0.14.1/almond-spark_2.13-0.14.1.pom"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import $ivy.`org.apache.spark::spark-sql:4.0.1`\n",
     "import $ivy.`org.apache.spark::spark-hive:4.0.1`\n",
-    "//import $ivy.`sh.almond::almond-spark:0.14.1` enable once available for NotebookSparkSession\n",
+    "//import $ivy.`sh.almond::almond-spark:0.14.1` \n",
     "import $ivy.`io.delta::delta-spark:4.0.0`"
    ]
   },
@@ -73,8 +54,8 @@
     "    .config(\"spark.ui.enabled\", \"true\")   \n",
     "    .config(\"spark.sql.extensions\", \"io.delta.sql.DeltaSparkSessionExtension\")\n",
     "    .config(\"spark.sql.catalog.spark_catalog\", \"org.apache.spark.sql.delta.catalog.DeltaCatalog\")\n",
-    "    .config(\"spark.sql.warehouse.dir\", \"./spark-warehouse\")\n",
-    "    .config(\"javax.jdo.option.ConnectionURL\", \"jdbc:derby:;databaseName=./metastore/metastore_db;create=true\")\n",
+    "    .config(\"spark.sql.warehouse.dir\", \"../spark-warehouse\")\n",
+    "    .config(\"javax.jdo.option.ConnectionURL\", \"jdbc:derby:;databaseName=../metastore/metastore_db;create=true\")\n",
     "    .config(\"spark.log.level\", \"WARN\")\n",
     "    .enableHiveSupport()\n",
     "    .getOrCreate()\n",
@@ -177,7 +158,7 @@
     "val raw_df = spark.read\n",
     "    .schema(schema)\n",
     "    .option(\"header\", \"true\")\n",
-    "    .csv(\"data/marvel.csv\")\n",
+    "    .csv(\"../data/marvel.csv\")\n",
     "\n",
     "raw_df.createOrReplaceTempView(\"superheroes_raw\")"
    ]
@@ -245,7 +226,7 @@
     "val raw_df_mod = spark.read\n",
     "    .schema(schema)\n",
     "    .option(\"header\", \"true\")\n",
-    "    .csv(\"data/marvel_mod.csv\")\n",
+    "    .csv(\"../data/marvel_mod.csv\")\n",
     "\n",
     "raw_df_mod.createOrReplaceTempView(\"superheroes_raw_mod\")"
    ]
